# SUMMER-TASK-1

./: README.md
ros2_ws/src/cone_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/cone_perception/cone_colour.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
ros2_ws/src/cone_perception/cone_perception/: camera_snapshot.py  cone_detector.py
ros2_ws/src/cone_perception/launch/: vision.launch.py
ros2_ws/src/cone_perception/urdf/: mobile_base.xacro  my_robot.urdf.xacro
ros2_ws/src/cone_perception/worlds/: my_world.sdf
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/my_package/: package.xml  setup.py
ros2_ws/src/my_robot_description/: package.xml  setup.py
ros2_ws/src/my_robot_description/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/my_robot_description/urdf/: simple_robot.urdf.xacro
ros2_ws/src/my_robot_description/worlds/: my_world.sdf
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/robot/: package.xml  setup.py
ros2_ws/src/robot/config/: bridge.yaml  robot_controllers.yaml
ros2_ws/src/robot/launch/: display.launch.py  full.launch.py  gazebo.launch.py
ros2_ws/src/robot/robot/: aruco_tracker.py
ros2_ws/src/robot/urdf/: common_properties.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  my_robot.urdf.xacro
ros2_ws/src/turtle_patrol/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/turtle_patrol/launch/: avoidance_launch.py
ros2_ws/src/turtle_patrol/turtle_patrol/: circle_patrol_client.py  circle_patrol_server.py  collision_avoidance_node.py
(+354 files in other folders)
